<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tableLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#8A7B7B">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp" android:id="@+id/button1"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_2"
                    android:layout_width="100dp"
                    android:layout_height="100dp" android:id="@+id/button2"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_3"
                    android:layout_width="100dp"
                    android:layout_height="100dp" android:id="@+id/button3"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/_4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button4"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_5"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button5"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_6"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button6"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/_7"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button7"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_8"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button8"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_9"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button9"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/buttonDecimal"
                    android:onClick="onDecimalPoint"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/button0"
                    android:onClick="onDigit"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:text="@string/_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" android:id="@+id/buttonEquals"
                    android:onClick="onEqual"
                    android:textColor="#FFFFFF" android:textSize="32sp"
                    style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="48sp"
            android:gravity="end|center_vertical"
            android:id="@+id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/current" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#504747"
            app:layout_constraintTop_toBottomOf="@+id/current">
        <Button
                android:text="@string/c"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/buttonClear"
                android:onClick="onClear"
                android:textColor="#FFFFFF" android:textSize="32sp"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:text="@string/divide"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/buttonDivide"
                android:onClick="onOperator"
                android:textColor="#FFFFFF" android:textSize="32sp"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:text="@string/multiply"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/buttonMultiply"
                android:onClick="onOperator"
                android:textColor="#FFFFFF" android:textSize="32sp"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:text="@string/subtract"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/buttonSubtract"
                android:onClick="onOperator"
                android:textColor="#FFFFFF" android:textSize="32sp"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:id="@+id/buttonAdd"
                android:onClick="onOperator"
                android:textColor="#FFFFFF" android:textSize="32sp"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="end|center_vertical"
            android:textSize="48sp"
            android:id="@+id/current" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>